--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "src/base.json",
     "scripts": {
-        "hackmyresume:build": "hackmyresume -d build src/base.json src/chinese.json -o src/chinese.json TO dist/base.html --theme ./src/fresh-theme-henlo && node ./scripts/generate-pdf.js ./dist/base.html ./dist/base.pdf",
-        "hackmyresume:dist": "hackmyresume build src/base.json src/private-*.json src/chinese.json TO dist/resume.html --theme ./src/fresh-theme-henlo && node ./scripts/generate-pdf.js ./dist/resume.html ./dist/resume.pdf",
+        "hackmyresume:build": "hackmyresume -d build src/base.json -o src/chinese.json TO dist/base.html --theme ./src/fresh-theme-henlo && node ./scripts/generate-pdf.js ./dist/base.html ./dist/base.pdf",
+        "hackmyresume:dist": "hackmyresume build src/base.json src/private-*.json -o src/chinese.json TO dist/resume.html --theme ./src/fresh-theme-henlo && node ./scripts/generate-pdf.js ./dist/resume.html ./dist/resume.pdf",
         "dev:browser-sync": "gulp",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
